# Caracal-Raylar-Smoke

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml  probe-rs-runner.ps1
ADR/common/: AGENTS.md
ADR/prompts/drivers/battery charger/: Driver Battery Charger.md
ADR/prompts/drivers/gps/: Driver GPS Driver Architecture.md  prompt01.md
ADR/prompts/drivers/microphone/: Driver Microphone.md
ADR/prompts/drivers/storage/: Driver Storage Architecture.md
ADR/prompts/drivers/voltage monitor/: Driver Voltage Monitor.md
ADR/prompts/services/logging/: Service Logging.md
ADR/prompts/services/power management/: Service Power Management.md
ADR/prompts/services/storage/: Service Storage Architecture.md
ADR/prompts/services/time/: Service Time Architecture.md
ADR/prompts/tests/integration/: integrationtest001.md
crates/board/raylar_v1p0/: Cargo.toml
crates/board/raylar_v1p0/src/: lib.rs
crates/drivers/: Cargo.toml
crates/drivers/src/: lib.rs
crates/drivers/src/batterycharger/: mod.rs  stm32.rs
crates/drivers/src/gps/: framer.rs  mod.rs  nmea.rs  stm32.rs  types.rs
crates/drivers/src/mic_array/: mod.rs  stm32.rs  stm32_config.rs
crates/drivers/src/storage/: directory.rs  driver.rs  error.rs  handles.rs  mod.rs  mount.rs  read.rs  stm32.rs  volume.rs  write.rs
crates/drivers/src/voltagemonitor/: calibration.rs  mod.rs  stm32.rs  stm32_vrefbuf.rs
crates/services/logging/: Cargo.toml
crates/services/logging/src/: format.rs  lib.rs  resources.rs  service.rs  sink.rs  types.rs
crates/services/powermanagement/: Cargo.toml
crates/services/powermanagement/src/: lib.rs  policy.rs  service.rs  types.rs
crates/services/storage/: Cargo.toml
crates/services/storage/src/: backend.rs  lib.rs  policy.rs  service.rs  types.rs
crates/services/time/: Cargo.toml
crates/services/time/src/: estimator.rs  gps.rs  lib.rs  service.rs  types.rs
drivertests/batterycharger/: Cargo.toml  main.rs
drivertests/gps/: Cargo.toml  main.rs
drivertests/mic_array/: Cargo.toml  main.rs
drivertests/storage/: Cargo.toml  main.rs
drivertests/voltagemonitor/: Cargo.toml  main.rs
integrationtests/integration001_powermonitorlog/: Cargo.toml  main.rs
servicetests/logging/: Cargo.toml  hardware.rs  main.rs  producers.rs
servicetests/powermanagement/: Cargo.toml  main.rs
servicetests/storage/: Cargo.toml  audio.rs  common.rs  log_gps.rs
servicetests/time/: Cargo.toml  main.rs
unitsmoke/01_helloworld/: Cargo.toml  main.rs
unitsmoke/02_userbutton/: Cargo.toml  main.rs
unitsmoke/03_buzzer/: Cargo.toml  main.rs
unitsmoke/04_sensi2c/: Cargo.toml  main.rs
unitsmoke/05_sensi2c_acc/: Cargo.toml  main.rs
unitsmoke/06_sensi2c_mag/: Cargo.toml  main.rs
unitsmoke/07_sensi2c_bq/: Cargo.toml  main.rs
unitsmoke/08_serial_gps/: Cargo.toml  main.rs
unitsmoke/09_serial_gps_pps/: Cargo.toml  main.rs
unitsmoke/10_pdm_mic1_mono/: Cargo.toml  main.rs
unitsmoke/11_sdmmc/: Cargo.toml  main.rs
unitsmoke/12_ebyte_rf/: Cargo.toml  main.rs
unitsmoke/13_ebyte_rx_tx/: Cargo.toml  main.rs
unitsmoke/14_ebyte_subg_lora/: Cargo.toml  main.rs
unitsmoke/15_ebyte_crate/: Cargo.toml  main.rs
unitsmoke/16_ebyte_crate_rx/: Cargo.toml  main.rs
unitsmoke/17_sleep_test/: Cargo.toml  main.rs
unitsmoke/18_pdm_mic1_dma/: Cargo.toml  main.rs
unitsmoke/19_pdm_micarray_dma/: Cargo.toml  main.rs
unitsmoke/20_pdm_mic_all_dma/: Cargo.toml  build.rs  main.rs  sram3_dma.x
unitsmoke/21_qwiic_oled/: Cargo.toml  main.rs
unitsmoke/22_read_adc/: Cargo.toml  main.rs
unitsmoke/23_gps_standby/: Cargo.toml  main.rs
unitsmoke/24_batt_charger/: Cargo.toml  main.rs
unitsmoke/25_sd_rawspeed/: Cargo.toml  main.rs
unitsmoke/26_tempsensors/: Cargo.toml  main.rs
unitsmoke/27_USB_CDC/: Cargo.toml  main.rs
unitsmoke/28_GPS_TIM_CC/: Cargo.toml  main.rs
unitsmoke/29_exfat_read/: Cargo.toml  main.rs
unitsmoke/30_exfat_write/: Cargo.toml  main.rs
