[workspace]
resolver = "2"
members = [
    "crates/drivers",
    "crates/board/raylar_v1p0",
    "crates/services/time",
    "crates/services/storage",
    "crates/services/logging",
    "drivertests/gps",
    "drivertests/voltagemonitor",
    "drivertests/storage",
    "servicetests/time",
    "servicetests/storage",
    "servicetests/logging",
    "unitsmoke/01_helloworld",
    "unitsmoke/02_userbutton",
    "unitsmoke/03_buzzer",
    "unitsmoke/04_sensi2c",
    "unitsmoke/05_sensi2c_acc",
    "unitsmoke/06_sensi2c_mag",
    "unitsmoke/07_sensi2c_bq",
    "unitsmoke/08_serial_gps",
    "unitsmoke/09_serial_gps_pps",
    "unitsmoke/10_pdm_mic1_mono",
    "unitsmoke/11_sdmmc",
    "unitsmoke/12_ebyte_rf",
    "unitsmoke/13_ebyte_rx_tx",
    "unitsmoke/14_ebyte_subg_lora",
    "unitsmoke/15_ebyte_crate",
    "unitsmoke/16_ebyte_crate_rx",
    "unitsmoke/17_sleep_test",
    "unitsmoke/18_pdm_mic1_dma",
    "unitsmoke/19_pdm_micarray_dma",
    "unitsmoke/20_pdm_mic_all_dma",
    "unitsmoke/21_qwiic_oled",
    "unitsmoke/22_read_adc",
    "unitsmoke/23_gps_standby",
    "unitsmoke/24_batt_charger",
    "unitsmoke/25_sd_rawspeed",
    "unitsmoke/26_tempsensors",
    "unitsmoke/27_USB_CDC",
    "unitsmoke/28_GPS_TIM_CC",
    "unitsmoke/29_exfat_read",
    "unitsmoke/30_exfat_write",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
embassy-stm32 = { version = "0.6.0", features = ["defmt", "exti", "memory-x", "stm32u595vj", "time-driver-tim5", "unstable-pac"] }
embassy-executor = { version = "0.10.0", features = ["defmt", "executor-thread", "platform-cortex-m"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-1_000_000"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
defmt = "1.1.0"
defmt-rtt = "1.2.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.5"

[profile.release]
lto = false
opt-level = "s"
codegen-units = 1
debug = true

[patch.crates-io]
exfat-slim = { path = "third_party/exfat-slim" }
