[package]
name = "service-test-logging"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "service-test-logging"
path = "main.rs"
test = false
bench = false

[dependencies]
raylar-board-v1p0 = { path = "../../crates/board/raylar_v1p0" }
raylar-drivers = { path = "../../crates/drivers", features = ["stm32", "defmt"] }
raylar-logging-service = { path = "../../crates/services/logging", features = ["defmt"] }
raylar-storage-service = { path = "../../crates/services/storage", features = ["defmt"] }
raylar-time-service = { path = "../../crates/services/time", default-features = false }
embassy-stm32.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
embedded-alloc = { version = "0.7.0", default-features = false, features = ["llff"] }
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true

[features]
trustzone-secure = [
    "embassy-stm32/trustzone-secure",
    "raylar-drivers/trustzone-secure",
]

[package.metadata.embassy]
build = [
    { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/servicetests/logging" },
]
