[package]
name = "unit-smoke-14_ebyte-subg-lora"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "unit-smoke-14_ebyte-subg-lora"
path = "main.rs"
test = false
bench = false

[dependencies]
raylar-board-v1p0 = { path = "../../crates/board/raylar_v1p0" }
embassy-stm32.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true

[features]
trustzone-secure = ["embassy-stm32/trustzone-secure"]

[package.metadata.embassy]
build = [
    { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/unitsmoke/14_ebyte-subg-lora" },
]
