[package]
name = "unit-smoke-17-sleep-test"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "unit-smoke-17-sleep-test"
path = "main.rs"
test = false
bench = false

[dependencies]
embassy-stm32 = { workspace = true, features = ["executor-thread", "low-power"] }
embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true

[features]
trustzone-secure = ["embassy-stm32/trustzone-secure"]

[package.metadata.embassy]
build = [
    { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/unitsmoke/17_sleep-test" },
]
