[package]
name = "unit-smoke-19-pdm-micarray-dma"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "unit-smoke-19-pdm-micarray-dma"
path = "main.rs"
test = false
bench = false

[dependencies]
embassy-stm32.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true

[features]
trustzone-secure = ["embassy-stm32/trustzone-secure"]

[package.metadata.embassy]
build = [
    { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/unitsmoke/19_pdm-micarray-dma" },
]
