[package]
name = "unit-smoke-30_exfat_write"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "unit-smoke-30_exfat_write"
path = "main.rs"
test = false
bench = false

[dependencies]
raylar-board-v1p0 = { path = "../../crates/board/raylar_v1p0" }
embassy-stm32.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
aligned = "0.4.2"
embedded-alloc = { version = "0.7.0", default-features = false, features = ["llff"] }
exfat-slim = { version = "0.5.0", features = ["defmt"] }
sdio-host = "0.9.0"

[features]
trustzone-secure = ["embassy-stm32/trustzone-secure"]

[package.metadata.embassy]
build = [
    { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/unitsmoke/30_exfat_write" },
]
