[package]
name = "raylar-time-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "raylar_time_service"
path = "src/lib.rs"

[features]
default = ["gps"]
defmt = ["dep:defmt", "embassy-sync/defmt", "raylar-drivers?/defmt"]
gps = ["dep:raylar-drivers"]

[dependencies]
defmt = { workspace = true, optional = true }
embassy-sync = "0.7.2"
embassy-time.workspace = true
raylar-drivers = { path = "../../drivers", optional = true }

